test/compile_errors/err_condvar_wait_in_no_suspend.w
//! expect-error: E0702

use std.sync

fn main:
    let lock = Mutex[i64].new(0 as i64)
    let cond = Condvar.new()
    no_suspend:
        cond.wait(&lock)
